Refactor some tests for better readability